Name fix
Fixed one of the land names from being too long

--- a/css/map.css
+++ b/css/map.css
@@ -3,7 +3,7 @@
     grid: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
     gap: 16px;
 
-    width: 90vw;
+    width: 80vw;
 }
 
 .land-tile {
